# legalai

./: .gitignore  README.md  legalai.code-workspace  pyproject.toml
rag_vs_finetuning/: plan.md
rag_vs_finetuning/data/: clean.py
rag_vs_finetuning/rag/: chunk.py  retrieval.py
