[project]
name = "legalai"
version = "0.1.0"
description = "AI Research for legal document analysis, retrieval, and automation"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "faiss-cpu>=1.13.2",
    "flashrank>=0.2.10",
    "google-genai>=1.56.0",
    "langchain>=1.2.0",
    "langchain-community>=0.4.1",
    "langchain-google-genai>=4.1.2",
    "langchain-ollama>=1.0.1",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "python-dotenv>=1.2.1",
    "tdqm>=0.0.1",
]
